# kemai

src/app/: mainwindow.cpp  mainwindow.h
src/core/: CMakeLists.txt
src/core/client/: kimaiapi.h  kimairequestfactory.cpp  kimairequestfactory.h
src/core/controller/: activitycontroller.cpp  activitycontroller.h  basecontroller.cpp  basecontroller.h  basecontroller_p.h  customercontroller.cpp  customercontroller.h  kimaicontroller.cpp  kimaicontroller.h  kimaicontroller_p.h  projectcontroller.cpp  projectcontroller.h  tagcontroller.cpp  tagcontroller.h
src/resources/l10n/: kemai_it.ts  kemai_ta.ts
